--- a/roles/vector/templates/vector.toml.j2
+++ b/roles/vector/templates/vector.toml.j2
@@ -11,7 +11,7 @@ inputs = [ "syslog_file" ]
 [sinks.syslog_sink]
 type = "kafka"
 inputs = [ "syslog_file" ]
-bootstrap_servers = "172.17.0.3:9092"
+bootstrap_servers = "kafka:9092"
 topic = "Vector"
 compression = "none"
 encoding = "text"
